--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <i class="fa fa-user fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UI/UX</h4>
-                    <p class="text-muted">Design is not about products, is about people. A great content should fit well on any device. I always keep "mobile first" aproach in mind, because I believe a great user experience is excencial.</p>
+                    <p class="text-muted">Design is not about products, is about people. A great content should fit well on any device. I always keep "mobile first" aproach in mind, because I believe a great user experience is what matter.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -109,7 +109,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front End Development</h4>
-                    <p class="text-muted">I love give life to great design. I work with modern and great technologies in order to create great products. I love work with JavaScript, CSS3, HTML5, Bootstrap, ReactJS and Angular 2.</p>
+                    <p class="text-muted">I love give life to great design. I work with modern and great technologies in order to create great products. I love work with JavaScript, CSS3, HTML5, Bootstrap and ReactJS.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -178,9 +178,9 @@
                 <div class="col-lg-12">
                     <p>
                         I am a front-end and WordPress developer based in Brazil. 
-                        I am fascinated by the power of the technology to change the world and impact it can have in the life of so many people. 
-                        I mainly do front-end stuff, however I love participate and understand the wohle process. 
-                        Between the technologies I love work with are: JavaScript, Angular 2, React, HTML, CSS, Bootstrap and WordPress.
+                        I am fascinated by the power of technology to change the world and the impact it can have in the life of so many people. 
+                        I mainly do front-end stuff, however I love participate and understand the whole process. 
+                        Between the technologies I love work with are: JavaScript, React, HTML, CSS, Bootstrap and WordPress.
                     </p>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                 <div class="col-lg-12">
                     <p>
                         I studied System Analysis and Development by University Center Dr. Leao Sampaio - Brazil. Where for three years I was presented to the world of technology and inovation. 
-                        There I learned things like: Software Engineer, Management, Produc Design, Programming, Web Development, Computer Network and so on.
+                        There I learned things like: Software Engineer, Project Management, Produc Design, Programming, Web Development, Computer Network and so on.
                     </p>
                 </div>
             </div>
@@ -205,7 +205,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>
-                        Besides the projects I worked on college. I have been working as a freelancer since last year (2016). My work evolve develop solutions in WordPress.
+                        Besides the projects I worked in college. I have been working as a freelancer since last year (2016). My work evolve develop solutions in WordPress.
                     </p>
                 </div>
             </div>
